# rpyutils

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  MANIFEST.in  README.md  bump_version.py  install.sh  pyproject.toml
.github/workflows/: mirrorgitlab.yml
docs/: README.md
docs/source/: conf.py  index.rst
docs/source/reference/: fcpp.app.rst  fcpp.example_gdocs.rst  fcpp.rectangle.rst  fcpp.rst  fcpp.utils.calculator.rst  fcpp.utils.custom_types.rst  fcpp.utils.prettifier.rst  fcpp.utils.rst  modules.rst
src/fcpp/: app.py  example_gdocs.py  rectangle.py
src/fcpp/config/: color_names.json
src/fcpp/utils/: calculator.py
src/rpyutils/: __init__.py  map_with_pbar.py  r_utils.py  utils_glbl.py
src/rpyutils/nb_utils/: jquery_datatables.py
src/rpyutils/random_words/: __init__.py
