[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "fcpp" # The thing used in `pip install name` to install your package
version = "0.0.1"
description = "Explore the world of rectangles"
readme = "README.md"
authors = [{ name = "Reza", email = "re.esfandiarpoor@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]
keywords = ["rectangle", "template", "tutorial"]
dependencies = ["rich >= 12.0.0"]
requires-python = ">=3.9"


# This is the thing that you do 'pip install fcpp[dev]' like 'pymongo[srv]'
# You can have multiple of these
[project.optional-dependencies]
dev = ["black", "isort", "sphinx", "furo", "sphinx_rtd_theme"]

[project.urls]
Homepage = "https://github.com/Reza-esfandiarpoor/formal-complete-p-package"
Documentation = "https://readthedocs.org/something-something-something"


[project.scripts]
fcppcli = "fcpp.__main__:main" # fcppcli is the name of the command used from cli
